--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     --primary-text-color: #183b56;
     --secondary-text-color: #6a6a69;
     --accent-color: #ed3622;
-    --accent-color-dark: #e81313;
+    --accent-color-dark: #5a13e8;
 }
 
 body {
