--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 :root {
     --primary-text-color: #183b56;
     --secondary-text-color: #6a6a69;
-    --accent-color: #ed3622;
+    --accent-color: #2276ed;
     --accent-color-dark: #5a13e8;
 }
 
